[BUGFIX] [NOJIRA] Fix Misaligned Adaptive Page Authoring UI (#1896)
* fixes misaligned adaptive page authoring UI caused by [FEATURE] [MER-312] Community and admin CRUD (#1866)

* fixes missing Torus sidenav popup menus in advanced authoring caused by [ENHANCEMENT] Popup Content #1731

--- a/assets/styles/authoring/advanced-authoring.scss
+++ b/assets/styles/authoring/advanced-authoring.scss
@@ -46,7 +46,7 @@ $panel-section-title-bar-color: #e8ebed;
   .aa-panel,
   .aa-header-nav {
     position: fixed;
-    z-index: 200;
+    z-index: 49;
     overflow-y: auto;
     visibility: hidden;
     align-items: start;
@@ -127,7 +127,7 @@ $panel-section-title-bar-color: #e8ebed;
     }
   }
   .aa-header-nav {
-    z-index: 201;
+    z-index: 51;
     padding: 0 16px;
     justify-content: center;
     padding: 0;
@@ -151,7 +151,7 @@ $panel-section-title-bar-color: #e8ebed;
   }
   .aa-panel-side-toggle {
     position: fixed;
-    z-index: 200;
+    z-index: 50;
     top: 50vh;
     transition-timing-function: ease-in-out;
     transition-duration: 0.3s;
@@ -298,7 +298,7 @@ $panel-section-title-bar-color: #e8ebed;
   }
   .aa-stage {
     position: fixed;
-    z-index: 100;
+    z-index: 48;
     top: 65px;
     left: 65px;
     right: 0;
@@ -683,7 +683,7 @@ $panel-section-title-bar-color: #e8ebed;
 
 .modal-dialog.modal-90w {
   width: 90%;
-  max-width: none!important;
+  max-width: none !important;
 }
 
 .modal-dialog.config-modal {
@@ -721,5 +721,5 @@ $panel-section-title-bar-color: #e8ebed;
 
 .canvas-dots {
   background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJElEQVQoU2M8cOLif2MdFQZCgPHzl6//CSkCyY8qxBtKRAcPAJ9FJplIpKVIAAAAAElFTkSuQmCC)
-      repeat;
+    repeat;
 }
